# DracoAnimatedPointClouds

./: .gitignore  README.md
ExampleFiles/AnimatedPointClouds/Brekel/BrekelKinect_capture_29_10_2016_18_09_41_Leica_PTS/: frame_0000.pts  frame_0001.pts  frame_0003.pts  frame_0009.pts  frame_0012.pts  frame_0015.pts  frame_0018.pts
ExampleFiles/DracoCompressed/: bun_zipper.drc  bunny_zipper_cl10.drc
example_sources/AnimatedPointClouds/Brekel/BrekelKinect_capture_29_10_2016_18_09_41_Leica_PLY [CONVERTED]/: frame_0000.ply  frame_0001.ply  frame_0002.ply  frame_0005.ply  frame_0006.ply  frame_0008.ply  frame_0010.ply  frame_0012.ply  frame_0013.ply  frame_0016.ply  frame_0017.ply
example_sources/AnimatedPointClouds/Brekel/BrekelKinect_capture_29_10_2016_18_09_41_Leica_PTS/: frame_0002.pts  frame_0004.pts  frame_0005.pts  frame_0006.pts  frame_0007.pts  frame_0008.pts  frame_0010.pts  frame_0011.pts  frame_0013.pts  (+3 more)
scripts/: converter.sh  out.drc.ply  pts2ply_dir-DRC.sh  pts2ply_dir.sh  temp  test_cloud
utils/: converter.sh
utils/pcltools/: normal_estimation_omp  pcd2ply  pcdnormal2ply  ply2pcd  statistical_removal
utils/plytools/: ACKNOWLEDGEMENTS
utils/plytools/ply/: CMakeLists.txt  boundply  flipply  frame_0000.ply  frame_0001.ply  headply  index.html  index.html?C=D;O=A.html  index.html?C=D;O=D.html  index.html?C=M;O=A.html  index.html?C=M;O=D.html  index.html?C=S;O=A.html  index.html?C=S;O=D.html  normalsply  obj2ply  platoply  ply2ascii  ply2binary  ply2iv  sphereply  xformply  xx.ply
utils/pts2ply/: CMakeLists.txt  README.md  main.cpp  pcx-strip.cpp
(+46 files in other folders)
